[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://assets/audio/music.wav" type="AudioStream" id=2]
[ext_resource path="res://levels/level6/Level.gd" type="Script" id=3]
[ext_resource path="res://assets/Font.tres" type="DynamicFont" id=4]

[node name="Power Trip" type="Node2D"]
script = ExtResource( 3 )

[node name="Items" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 100, 100 )
format = 1
tile_data = PoolIntArray( -1376278, 10, 0, -1179665, 10, 0, -655379, 10, 0, -720896, 10, 0, -524282, 10, 0, -196626, 10, 0, 65546, 10, 0, 393239, 6, 0 )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true
max_distance = 9.22337e+18

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 100, 100 )
format = 1
tile_data = PoolIntArray( -1900580, 3, 0, -1835044, 3, 0, -1769508, 3, 0, -1703972, 3, 0, -1638436, 3, 0, -1572900, 3, 0, -1572884, 3, 0, -1572883, 3, 0, -1572882, 3, 0, -1572881, 3, 0, -1572880, 3, 0, -1572879, 3, 0, -1572878, 3, 0, -1572877, 3, 0, -1572876, 3, 0, -1572875, 3, 0, -1572874, 3, 0, -1572873, 3, 0, -1572872, 3, 0, -1572871, 3, 0, -1507364, 3, 0, -1507358, 3, 0, -1507335, 3, 0, -1507334, 3, 0, -1507333, 3, 0, -1507332, 3, 0, -1507331, 3, 0, -1507329, 3, 0, -1572864, 3, 0, -1572863, 3, 0, -1572861, 3, 0, -1572860, 3, 0, -1572859, 3, 0, -1572857, 3, 0, -1572856, 3, 0, -1572855, 3, 0, -1572853, 3, 0, -1572852, 3, 0, -1572849, 3, 0, -1572848, 3, 0, -1572847, 3, 0, -1572846, 3, 0, -1572845, 3, 0, -1572842, 3, 0, -1572841, 3, 0, -1572840, 3, 0, -1572839, 3, 0, -1572838, 3, 0, -1572837, 3, 0, -1572836, 3, 0, -1572835, 3, 0, -1572834, 3, 0, -1572833, 3, 0, -1572832, 3, 0, -1441828, 3, 0, -1376292, 3, 0, -1376268, 3, 0, -1310756, 3, 0, -1310750, 3, 0, -1310749, 3, 0, -1310748, 3, 0, -1310747, 3, 0, -1310746, 3, 0, -1310745, 3, 0, -1310744, 3, 0, -1310743, 3, 0, -1310742, 3, 0, -1310741, 3, 0, -1310740, 3, 0, -1310739, 3, 0, -1310732, 3, 0, -1245220, 3, 0, -1245208, -1610612733, 0, -1245200, 3, 0, -1245199, 3, 0, -1245198, 3, 0, -1245197, 3, 0, -1245196, 3, 0, -1245195, 3, 0, -1245194, 3, 0, -1245193, 3, 0, -1245192, 3, 0, -1179684, 3, 0, -1179672, -1610612733, 0, -1179656, 3, 0, -1179655, 3, 0, -1179654, 3, 0, -1114148, 3, 0, -1114136, -1610612733, 0, -1114118, 3, 0, -1114117, 3, 0, -1114116, 3, 0, -1048612, 3, 0, -1048600, -1610612733, 0, -1048580, 3, 0, -1048579, 3, 0, -1048578, 3, 0, -983076, 3, 0, -983064, -1610612733, 0, -983053, 1073741827, 0, -983052, 1073741827, 0, -983051, 1073741827, 0, -983050, 1073741827, 0, -983049, 1073741827, 0, -983042, 3, 0, -983041, 3, 0, -1048575, 3, 0, -1048574, 3, 0, -1048573, 3, 0, -1048572, 3, 0, -1048571, 3, 0, -1048570, 3, 0, -1048569, 3, 0, -1048568, 3, 0, -1048567, 3, 0, -1048566, 3, 0, -917540, 3, 0, -917539, 3, 0, -917538, 3, 0, -917537, 3, 0, -917536, 3, 0, -917535, 3, 0, -917534, 3, 0, -917533, 3, 0, -917532, 3, 0, -917531, 3, 0, -917530, -1610612733, 0, -917529, -1610612733, 0, -917528, -1610612733, 0, -917513, 1073741827, 0, -917512, 1073741827, 0, -983030, 3, 0, -983029, 3, 0, -983028, 3, 0, -983027, 3, 0, -983026, 3, 0, -983025, 3, 0, -983024, 3, 0, -983023, 3, 0, -983022, 3, 0, -983021, 3, 0, -851998, 3, 0, -851976, 1073741827, 0, -851975, 1073741827, 0, -917485, 3, 0, -917484, 3, 0, -786462, 3, 0, -786439, 1073741827, 0, -786438, 1073741827, 0, -851948, 3, 0, -851947, 3, 0, -720926, 3, 0, -720902, 1073741827, 0, -720901, 1073741827, 0, -786411, 3, 0, -786410, 3, 0, -786402, -1073741821, 0, -655390, 3, 0, -655389, 3, 0, -655388, 3, 0, -655387, 3, 0, -655386, 3, 0, -655365, 1073741827, 0, -655364, 1073741827, 0, -720893, 3, 0, -720892, 3, 0, -720874, -1073741821, 0, -720873, -1073741821, 0, -720866, -1073741821, 0, -589850, -1610612733, 0, -589849, 3, 0, -589848, 3, 0, -589847, 1073741827, 0, -589846, 1073741827, 0, -589844, 1073741827, 0, -589843, 1073741827, 0, -589842, 1073741827, 0, -589841, 1073741827, 0, -589840, 3, 0, -589839, 3, 0, -589838, 3, 0, -589837, 3, 0, -589836, 3, 0, -589828, 1073741827, 0, -589827, 1073741827, 0, -589826, 1073741827, 0, -589825, 1073741827, 0, -655360, 3, 0, -655359, 3, 0, -655358, 3, 0, -655330, -1073741821, 0, -524314, 3, 0, -589794, -1073741821, 0, -458778, 3, 0, -524265, 3, 0, -524264, 3, 0, -524261, 3, 0, -524260, 3, 0, -524259, -1073741821, 0, -524258, -1073741821, 0, -393242, 3, 0, -458749, 3, 0, -458748, 3, 0, -458747, 3, 0, -458746, 3, 0, -458745, 3, 0, -458744, 3, 0, -458743, 3, 0, -458742, 3, 0, -458741, 3, 0, -458740, 3, 0, -458739, 3, 0, -458738, 3, 0, -458737, 3, 0, -458736, 3, 0, -458735, 3, 0, -458733, 3, 0, -458732, 3, 0, -458731, 3, 0, -458730, 3, 0, -458729, 3, 0, -327706, 3, 0, -327696, 3, 0, -327695, 3, 0, -327694, 3, 0, -327693, 3, 0, -327692, 3, 0, -327691, 3, 0, -327690, 3, 0, -327689, 3, 0, -327688, 3, 0, -327685, 3, 0, -327684, 3, 0, -327683, 3, 0, -327682, 3, 0, -327681, 3, 0, -393215, 3, 0, -393214, 3, 0, -393213, 3, 0, -262170, 3, 0, -196634, 3, 0, -131108, 3, 0, -131107, 3, 0, -131106, 3, 0, -131098, 3, 0, -131097, 3, 0, -131096, 3, 0, -131095, 3, 0, -131094, 3, 0, -131093, 3, 0, -131092, 3, 0, -131091, 3, 0, -131090, 3, 0, -131089, 3, 0, -131088, 3, 0, -131087, 3, 0, -131086, 3, 0, -131085, 3, 0, -131084, 3, 0, -131083, 3, 0, -131082, 3, 0, -131081, 3, 0, -131080, 3, 0, -131079, 3, 0, -131078, 3, 0, -131077, 3, 0, -131076, 3, 0, -131075, 3, 0, -131074, 3, 0, -131073, 3, 0, -196608, 3, 0, -196607, 3, 0, -196606, 3, 0, -196605, 3, 0, -65570, 3, 0, -65569, 3, 0, -65568, 3, 0, -131069, 3, 0, -131068, 3, 0, -131067, 3, 0, -32, 3, 0, -31, 3, 0, -30, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65508, -1073741821, 0, -65507, -1073741821, 0, -65506, -1073741821, 0, 65506, 3, 0, 65507, 3, 0, 65508, 3, 0, 25, -1073741821, 0, 26, -1073741821, 0, 27, -1073741821, 0, 28, -1073741821, 0, 131044, 3, 0, 131045, 3, 0, 131046, 3, 0, 65556, -1073741821, 0, 65557, -1073741821, 0, 65558, -1073741821, 0, 65559, -1073741821, 0, 65560, -1073741821, 0, 65561, -1073741821, 0, 196582, 3, 0, 196583, 3, 0, 196584, 3, 0, 196585, 3, 0, 196586, 3, 0, 196587, 3, 0, 196588, 3, 0, 196589, 3, 0, 196590, 3, 0, 196591, 3, 0, 196592, 3, 0, 196593, 3, 0, 196594, 3, 0, 196595, 3, 0, 196596, 3, 0, 196597, 3, 0, 196598, 3, 0, 196599, 3, 0, 196600, 3, 0, 196601, 3, 0, 196602, 3, 0, 196603, 3, 0, 196604, 3, 0, 196605, 3, 0, 196606, 3, 0, 196607, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0 )

[node name="CRectLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="CRect" type="ColorRect" parent="CRectLayer"]
margin_right = 1100.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvisibleSpikes" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 100, 100 )
collision_layer = 4
collision_mask = 2
format = 1
tile_data = PoolIntArray( -1507330, 2, 0, -1572862, 2, 0, -1572858, 2, 0, -1572854, 2, 0, -1572851, 2, 0, -1572850, 2, 0, -1572844, 2, 0, -1572843, 2, 0, -983075, 2, 0, -983074, 2, 0, -983073, 2, 0, -983072, 2, 0, -983071, 2, 0, -983070, 2, 0, -983069, 2, 0, -983068, 2, 0, -983067, 2, 0, -983066, 2, 0, -1048576, 2, 0, -917505, 1073741826, 0, -983040, 1073741826, 0, -983039, 1073741826, 0, -786403, -1073741822, 0, -655385, -1610612734, 0, -720867, -1073741822, 0, -589845, 2, 0, -655331, -1073741822, 0, -589795, -1073741822, 0, -524263, 2, 0, -524262, 2, 0, -458734, 2, 0, -393216, 2, 0, -196644, 2, 0, -65509, -1073741822, 0, 24, -1073741822, 0, 131047, -1610612734, 0, 65555, -1073741822, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="WarpHole" type="TileMap" parent="."]
z_index = 4096
tile_set = ExtResource( 1 )
cell_size = Vector2( 100, 100 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -524314, 3, 0, -524313, 6, 0, -524312, 4, 0, -524311, 11, 0, -524310, 12, 0, -458778, 3, 0, -458777, 6, 0, -458776, 4, 0, -458775, 11, 0, -458774, 12, 0, -393242, 3, 0, -393241, 6, 0, -393240, 4, 0, -393239, 11, 0, -393238, 12, 0, -327706, 3, 0, -327705, 6, 0, -327704, 4, 0, -327703, 11, 0, -327702, 12, 0, -262170, 3, 0, -262169, 6, 0, -262168, 4, 0, -262167, 11, 0, -262166, 12, 0, -196634, 3, 0, -196633, 6, 0, -196632, 4, 0, -196631, 11, 0, -196630, 12, 0 )

[node name="Label" type="Label" parent="WarpHole"]
margin_left = -2454.82
margin_top = -594.621
margin_right = -2046.82
margin_bottom = -540.621
custom_fonts/font = ExtResource( 4 )
text = "Warp Hole!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
